--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "chai": "^4.2.0",
     "debug": "^4.1.0",
     "dotenv": "^6.1.0",
+    "express": "^4.16.4",
     "faker": "^4.1.0",
     "geojson": "^0.5.0",
     "knex": "^0.15.2",
