--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "faker": "^4.1.0",
     "geojson": "^0.5.0",
     "knex": "^0.15.2",
+    "libphonenumber-js": "^1.6.5",
     "lodash": "^4.17.11",
+    "mime": "^2.3.1",
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
+    "normalize-email": "^1.1.1",
     "pg": "^7.5.0",
     "rimraf": "^2.6.2",
     "sqlite3": "^4.0.3",
-    "superagent": "^4.0.0-beta.5"
+    "superagent": "^4.0.0-beta.5",
+    "supertest": "^3.3.0"
   },
   "name": "api",
   "description": "Justice Democrats' API!",
