--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "airtable": "^0.5.7",
     "chai": "^4.2.0",
     "debug": "^4.1.0",
@@ -8,6 +9,7 @@
     "faker": "^4.1.0",
     "geojson": "^0.5.0",
     "knex": "^0.15.2",
+    "kue": "^0.11.6",
     "libphonenumber-js": "^1.6.5",
     "lodash": "^4.17.11",
     "mime": "^2.3.1",
@@ -16,6 +18,7 @@
     "normalize-email": "^1.1.1",
     "pg": "^7.5.0",
     "rimraf": "^2.6.2",
+    "snake-case": "^2.1.0",
     "sqlite3": "^4.0.3",
     "superagent": "^4.0.0-beta.5",
     "supertest": "^3.3.0"
@@ -28,7 +31,7 @@
   "scripts": {
     "deploy": "gcloud beta functions deploy signup --region us-central1 --env-vars-file .env.yaml",
     "start": "node app.js",
-    "test": "mocha"
+    "test": "NODE_ENV=test mocha"
   },
   "repository": {
     "type": "git",
