--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@sendgrid/mail": "^6.3.1",
     "airtable": "^0.5.7",
     "chai": "^4.2.0",
+    "cors": "^2.8.5",
     "debug": "^4.1.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
@@ -10,11 +11,13 @@
     "geojson": "^0.5.0",
     "knex": "^0.15.2",
     "kue": "^0.11.6",
+    "kue-ui-express": "^1.1.1",
     "libphonenumber-js": "^1.6.5",
     "lodash": "^4.17.11",
     "mime": "^2.3.1",
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
+    "morgan": "^1.9.1",
     "normalize-email": "^1.1.1",
     "pg": "^7.5.0",
     "rimraf": "^2.6.2",
@@ -30,7 +33,7 @@
   "devDependencies": {},
   "scripts": {
     "deploy": "gcloud beta functions deploy signup --region us-central1 --env-vars-file .env.yaml",
-    "start": "node app.js",
+    "start": "knex migrate:latest && node app.js",
     "test": "NODE_ENV=test mocha"
   },
   "repository": {
