--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "airtable": "^0.5.7",
     "chai": "^4.2.0",
     "cors": "^2.8.5",
+    "cryptr": "^4.0.1",
     "debug": "^4.1.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
