--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
     "airtable": "^0.5.7",
+    "basicauth-middleware": "^3.1.0",
     "chai": "^4.2.0",
     "cors": "^2.8.5",
     "cryptr": "^4.0.1",
