--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
+    "node-cron": "^2.0.3",
     "normalize-email": "^1.1.1",
     "pg": "^7.5.0",
     "rimraf": "^2.6.2",
