--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "faker": "^4.1.0",
+    "free-google-image-search": "^1.0.0",
     "geojson": "^0.5.0",
     "knex": "^0.15.2",
+    "knowledge-node": "^1.0.0",
     "kue": "^0.11.6",
     "kue-ui-express": "^1.1.1",
     "libphonenumber-js": "^1.6.5",
